# codechart

./: AGENTS.md  README.md  codechart.group.md  eslint.config.js  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.group.md
src-tauri/src/: lib.rs  main.rs  src.group.md
src-tauri/src/analysis/: analysis.group.md  mod.rs  nodes.rs  tests.rs
src-tauri/src/cli/: cli.group.md
src-tauri/src/contract/: builder.rs  contract.group.md  mod.rs  types.rs  validate.rs
src-tauri/src/diagnostics/: diagnostics.group.md  mod.rs
src-tauri/src/git/: git.group.md  metrics.rs  metrics_log.rs  mod.rs
src-tauri/src/grouping/: claim.rs  disconnect.rs  grouping.group.md  infer.rs  matcher.rs  mod.rs  nesting.rs  tests.rs
src-tauri/src/language_adapter/: adapter_types.rs  language_adapter.group.md  mod.rs  registry.rs
src-tauri/src/language_adapter/cpp/: cpp.group.md  extract.rs  implements.rs  include.rs  mod.rs  tests.rs
src-tauri/src/language_adapter/csharp/: csharp.group.md  extract.rs  implements.rs  mod.rs  symbols.rs  tests.rs
src-tauri/src/project_config/: ignore.rs  mod.rs  parse.rs  project_config.group.md  tests.rs
src-tauri/src/project_source/: fs_source.rs  memory_source.rs  mod.rs  project_source.group.md
src-tauri/src/references/: cpp.rs  csharp.rs  drift.rs  interface_seams.rs  mod.rs  references.group.md  resolve.rs  soft.rs  tauri_ipc.rs  test_module.rs  tests.rs  unity.rs
src-tauri/src/semantic_comments/: mod.rs  semantic_comments.group.md  tests.rs
src-tauri/src/tauri_api/: mod.rs  tauri_api.group.md  tests.rs
src-tauri/src/unity_assets/: meta.rs  mod.rs  tests.rs  unity_assets.group.md
src-tauri/src/unreal_config/: mod.rs  tests.rs
(+343 files in other folders)
