[package]
name = "codechart"
version = "0.1.0"
description = "Codechart — interactive architecture maps for code review"
authors = ["you"]
edition = "2021"
default-run = "codechart"

[lib]
name = "codechart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codechart-cli"
path = "src/bin/codechart-cli.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ts-rs = { version = "10", features = ["serde-json-impl", "no-serde-warnings"] }
thiserror = "1"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
serde_yaml = "0.9"
glob = "0.3"
regex = "1"
tree-sitter-c-sharp = "0.23.5"

[dev-dependencies]
tempfile = "3"
